# librmn-tools

./: .gitignore  CMakeExtras.txt  CMakeLists.txt  Config.cmake.in  MANIFEST
include/: internal.hf  with_simd.h
modules/: ec_tools_extras.cmake  ec_tools_project_files.cmake
src/: dummy.F90  dummy.c
src/ATTIC/: data_info_old.c  quantize_old.c
src/PUBLIC_INCLUDES/: rmntools.hf
src/PUBLIC_INCLUDES/rmn/: atomic_functions.h  bi_endian_pack.h  bit_pack_macros.h  bit_stream.h  bitmaps.h  bits.h  c_binding_extras.hf  c_record_io.h  compress_data.h  compress_expand.h  copy_swap.h  ct_assert.h  data_info.h  data_map.h  entropy.h  eval_diff.h  fastapprox.h  filter_000.h  filter_001.h  filter_100.h  filter_110.h  filter_254.h  filter_255.h  filter_all.h  filter_base.h  float_block_encoders.h  function_pointers.h  identify_compiler_c.h  identify_compiler_f.h  identify_compiler_f.hf  identify_mpi_child.h  ieee_quantize.h  is_fortran_compiler.h  library_plugin.hf  lorenzo.h  misc_operators.h  misc_pack.h  move_blocks.h  pack_filters.h  pipe_filters.h  (+19 more)
src/diag/: c_record_io.c  data_info.c  data_info_mod.F90  entropy.c  eval_diff.c  misc_analyze.c  print_helpers.c  raw_test_io.c  readlx_new.F90  simd_compare.c  sparse_concat.c  tee_print.c  test_helpers.c
src/id/: identify_compiler.c  identify_mpi_child.c
src/pack/: avx-2-512_ref.c  bi_endian_pack.c  bitmaps.c  compress_data.c  compress_expand.c  copy_swap.c  data_map.c  filter_000.c  filter_001.c  filter_100.c  filter_110.c  filter_254.c  filter_255.c  float_block_encoders.c  float_encoder_4x4.c  ieee_quantize.c  misc_operators.c  misc_pack.c  move_blocks.c  pack_filters.c  pipe_filters.c  pixmaps.c  serialized_functions.c  stream_pack.c  tile_encoders.c  tools_function_call.c  tracked_malloc.c
src/plugins/: fortran_plugins.F90  plugin_code.c  plugin_constructor.c
src/pred/: analyze_data.F90  average_2x2.c  lorenzo_c.c  lorenzo_mod.F90  pred_dummy.F90  pred_dummy.c  smooth124.c
src/timers/: rmn_timers.c
tests/: CMakeLists.txt  fstd_to_raw.F90  inp_readlx_02.txt  inp_readlx_03.txt  plugin_0.F90  plugin_0.c  plugin_1.c  plugin_2.c  sharedf1.F90  sharedf2.F90  test_atomic_functions.c  test_bi_endian_pack.c  test_bi_endian_pack_macros.c  test_bitmaps.c  test_bits.F90  test_bitstream.c  test_c.c  test_c_record_io.F90  test_c_record_io.c  test_compress_expand.c  test_copy_swap.c  test_data_info.F90  test_data_info.c  test_data_map.c  test_encoders.c  test_entropy.c  test_f.F90  test_float_block_encoders.c  test_float_encoder_4x4.c  test_fstd_compress.F90  test_function_call.c  test_helpers.c  test_identify_compiler_c.c  test_identify_compiler_f.F90  test_identify_mpi_child.c  test_ieeequantize.c  test_logquantize.c  test_lorenzo.F90  test_lorenzo_c.c  test_move_blocks.c  (+20 more)
tools/: c_binding_extras.c
